# classic-operations

./: README.md  setup.cfg
sources/classic/operations/: __init__.py  callbacks.py  counter.py  decorator.py  local_dict.py  operation.py
tests/: example.py  test_decorator.py  test_operation.py
